# waterfall-viewer

./: .gitignore  CLAUDE.md  INSTALL.en.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  README.en.md  README.md  TASKS.md  pyproject.toml  requirements.txt  run.bat  waterfall-viewer.spec
awf/: __init__.py
awf/analysis/: calibration_fit.py  efficiency.py  identify.py  peaks.py
awf/data/: nuclides.json
awf/io/: aswf_loader.py  aswf_single_writer.py  aswf_writer.py  becqmoni_loader.py  becqmoni_writer.py  csv_loader.py  n42_loader.py  n42_writer.py  nuclide_lib.py  (+4 more)
scripts/: fix159_th232_used.py  gen_nuclides_json.py  i18n_audit.py  i18n_audit_untranslated.py  recalibrate_aswf.py  smoke_interact.py  smoke_realfile.py  smoke_ui240_dark_report.py
tests/: conftest.py  test_analytics.py  test_assembler.py  test_aswf_loader.py  test_aswf_single_writer.py  test_aswf_v4.py  test_aswf_v5.py  test_aswf_writer.py  test_background.py  test_becqmoni_loader.py  test_bg_ui.py  test_calibration_dialog.py  test_calibration_fit.py  test_collector.py  test_contour.py  test_csv_loader.py  test_device.py  test_device_data_panel.py  test_dose_ui.py  test_efficiency.py  test_fwhm_calibration.py  test_group4_remarks.py  test_highlight.py  test_i18n.py  test_identify.py  test_integrity_dialog.py  test_knobs_panel.py  test_nuclide_families.py  test_nuclide_lib.py  test_nuclide_panel.py  test_peak_time_mask.py  test_peaks_ui.py  test_section_sync.py  test_segments_ui.py  test_series.py  test_shproto.py  test_slice_analysis.py  test_spe_loader.py  test_spectrum_export.py  test_transient_peaks.py  (+5 more)
(+39 files in other folders)
